feat: get all members in project implementation
